--- a/lancer.html
+++ b/lancer.html
@@ -18,11 +18,14 @@
     	<main class="lanc">
               		
     	</main>
+          <div class="main2">
         <div class="me">
             <p>Mitsubishi Lancer Evolution IX поступил в продажу в Японии 3 марта 2005. Двухлитровый двигатель 4G63 имел технологию MIVEC(Применение MIVEC позволило увеличить мощность двигателя со 145 л.с.до 175 л.с.) и доработанную турбину, в результате модернизации мощность двигателя возросла до 291 л.с.</p>
-            <p>Mitsubishi Lancer тоже участвовал в филме форсаж </p>                             
-             </div>
-            <img class="dod" src="./img/header/lancee.jpg">  
+                                         
+            <img class="dod" src="./img/header/lancee.jpg">
+             <p class="uro">Mitsubishi Lancer тоже участвовал в филме форсаж </p> 
+         </div>
+     </div>
     	<footer>
     	<p class="you">Сайт создан при поддержки Юниума.</p>  <a href="#momo" class="elmenu">Вверх</a>	       
     	</footer>
