--- a/Dodge.html
+++ b/Dodge.html
@@ -12,7 +12,7 @@
     			<a href="index.html" class="elmenu">Главная</a>
                 <a href="Dodge.html" class="elmenu">Dodge   </a>
                 <a href="skyline.html" class="elmenu">Skylane</a>
-    			<a href="Lancer.html" class="elmenu">Lancer</a>	
+    			<a href="lancer.html" class="elmenu">Lancer</a>	
     		</div>
     	</header>
     	<main class="dodges">
